src/test/deca/codegen/valid/addition_mult.deca
// Description:
//    test addition multiple
//
// Resultats:
//    6
//
// Historique:
//    cree le 13/01/2017
{
int x = 2;
x = x + x + x;
print(x);
}
