src/test/deca/codegen/invalid/NoInitPlusNoInit.deca
// Description:
//    addition sans initialisation
//
// Resultats:
//  Erreur
//
// Historique:
//    cree le 13/01/2017
{
int x;
int y;
print(x + y);
}
